# llm-redteam-agent

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  TRACKER.md  docker-compose.yml  main.py  pyproject.toml
scripts/: run_eval.py  single_shot.py
src/agents/: attacker.py  judge.py  strategist.py
src/attacks/: advbench_loader.py  library.py
src/eval/: metrics.py  report.py
src/graph/: redteam_graph.py
src/serving/: vllm_client.py
