[project]
name = "llm-redteam-agent"
version = "0.1.0"
description = "Automated multi-agent LLM red-teaming system using LangGraph, vLLM, and Gemma 4"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
